<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="eSystemState" Id="{93d86144-6af9-4998-962a-8973fe33b637}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eSystemState :
(
	AUS 			:= 0,				// Das System ist ausgeschalten
	BEREIT 			:= 1,				// Das System ist eingeschalten und bereit einen Prozess durchzuführen
	LAUFEND 		:= 2,				// Ein Prozess wird ausgeführt
	GESTOPPT		:= 3,				// Ein Prozess wurde gestoppt
	FEHLER			:= 4				// Es gibt einen Fehler im System 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>